--- a/src/WTelegramClient.csproj
+++ b/src/WTelegramClient.csproj
@@ -11,9 +11,9 @@
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <PackageId>WTelegramClient</PackageId>
-    <Authors>Wizou</Authors>
+    <Authors>Wizou,Davide</Authors>
     <VersionPrefix>0.0.0</VersionPrefix>
-    <VersionSuffix>layer.214</VersionSuffix>
+    <VersionSuffix>layer.214.custom</VersionSuffix>
     <Description>Telegram Client API (MTProto) library written 100% in C# and .NET Standard | Latest API layer: 214
 
 Release Notes:
